--- a/Portal.Client/Shared/MainLayout.razor.css
+++ b/Portal.Client/Shared/MainLayout.razor.css
@@ -4,25 +4,19 @@
     flex-direction: column;
 }
 
-
 .main {
-    margin-left: 180px; /* Same as the width of the sidenav */
-    margin-right: 200px; /* Same as the width of the quicksearch */
-    margin-top: 75px;
-}
-
-.main-full {
-    margin-top: 75px;
-    margin-left: 45px;
-    margin-right: 200px; /* Same as the width of the quicksearch */
-}
-
-.content {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    /*    display: flex;
+    flex-direction: row;
+    gap: var(--padding)*/
     min-height: 100vh;
-        margin-left: 0px;
+    margin-left: 150px;
 }
-    .content .full {
-        margin-left: 0px;
+
+    .main.full {
+        margin-left: 150px;
+        /*margin-right: 150px;*/
     }
 
 .top-row {
@@ -74,17 +68,27 @@ footer {
         font-size: 0.9rem;
     }
 
-
-@media (max-width: 450px){
-    .main-full {
-        margin-top: 75px;
-        margin-left: 45px;
-        margin-right: 200px; /* Same as the width of the quicksearch */
-    }
-
+@media(max-width: 768px) {
     .main {
-        margin-left: 110px; /* Same as the width of the sidenav */
-        margin-right: 200px; /* Same as the width of the quicksearch */
+        margin-right: auto; /* Same as the width of the quicksearch */
         margin-top: 75px;
+        margin-left: 50px;
     }
+
+        .main.full {
+            margin-top: 75px;
+        }
+}
+
+@media (max-width: 450px) {
+    .main {
+        margin-top: 75px;
+        margin-right: auto; /* Same as the width of the quicksearch */
+        margin-left: 50px;
+    }
+
+        .main.full {
+            margin-top: 75px;
+            margin-left: 65px;
+        }
 }
