--- a/Portal.Client/Components/UIComponents/NavBar.razor
+++ b/Portal.Client/Components/UIComponents/NavBar.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
 @inject NavigationManager Navigation
-<nav class="w-100 d-flex justify-content-between py-2">
+<nav class="w-100 d-flex justify-content-between py-2" style="background-color: var(--color-white)">
 @* 	<NavLink href="/">
 		<img alt="PRS" src=@("/images/PRS-Primary-Logo.svg") style=@("width:120px") class="prs-logo" />
 	</NavLink> *@
