--- a/Portal.Client/Pages/Councils.razor
+++ b/Portal.Client/Pages/Councils.razor
@@ -2,16 +2,10 @@
 
 <PageTitle>Councils - PRS Portal</PageTitle>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
+<div class="container">
             <h1 class="mb-4">
                 Councils
             </h1>
-            
-   
-        </div>
-    </div>
 </div>
 
 @code {
