--- a/Portal.Client/Pages/Dashboard.razor.css
+++ b/Portal.Client/Pages/Dashboard.razor.css
@@ -2,6 +2,8 @@
     padding: 2rem;
     background-color: var(--color-background);
     min-height: 100vh;
+    max-width: 1500px;
+    margin: auto;
 }
 
 .header-section {
