--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -17,6 +17,7 @@
 @using Portal.Client.Components;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using MudBlazor
+@using Heron.MudCalendar
 
 @inject IApiService _apiService;
 @inject IDialogService _dialogService;
