--- a/Portal.Client/Components/UIComponents/SideNav.razor
+++ b/Portal.Client/Components/UIComponents/SideNav.razor
@@ -1,5 +1,5 @@
 ﻿
-<nav class="sidebar d-flex ps-2 gap-2 flex-column">
+<nav class="sidebar d-flex ps-2 gap-2 flex-column" style="background-color: var(--color-white)">
     <NavLink href="/">
         <img alt="PRS" src=@(minimize ? "/images/MinimalLogo.svg" : "/images/PRS-Primary-Logo.svg")
              style=@(minimize ? "width: 40px" : "width:120px") class="prs-logo ms-2" />
@@ -29,6 +29,12 @@
                 <NavLink class="nav-link" href="Councils">
                     <MudIcon Icon="@Icons.Material.Filled.FormatListNumbered" Title="Favorite" />
                     Councils
+                </NavLink>
+            </li>
+            <li class="nav-item px-2">
+                <NavLink class="nav-link" href="Schedule">
+                    <MudIcon Icon="@Icons.Material.Filled.CalendarViewMonth" Title="Schedule" />
+                    Schedule
                 </NavLink>
             </li>
         </ul>
