--- a/Portal.Client/Components/UIComponents/StatusBadge.razor
+++ b/Portal.Client/Components/UIComponents/StatusBadge.razor
@@ -26,7 +26,7 @@
 
 <style>
     .status-badge {
-        color: white;
+        color: black;
         padding: 8px 16px;
         border-radius: 25px;
         font-weight: 600;
