--- a/Portal.Client/wwwroot/css/app.css
+++ b/Portal.Client/wwwroot/css/app.css
@@ -28,7 +28,7 @@ body {
     background-color: var(--color-background) !important;
     transition: color 0.5s, background-color 0.5s;
     line-height: 1.6;
-    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
