--- a/Portal.Client/Components/UIComponents/SideNav.razor
+++ b/Portal.Client/Components/UIComponents/SideNav.razor
@@ -37,6 +37,12 @@
                     Schedule
                 </NavLink>
             </li>
+            <li class="nav-item px-2">
+                <NavLink class="nav-link" href="Settings">
+                    <MudIcon Icon="@Icons.Material.Filled.Settings" Title="Settings" />
+                    Settings
+                </NavLink>
+            </li>
         </ul>
     </AuthorizeView>
     <div class="auth-controls">
